refactor: architectural overhaul of plugin structure
- Enforce application/domain/platform layer separation
- Extract GameManager interface and GameOrchestrator interface
- Implement PaperGameManager as single platform implementation
- Extract BlimpExplosionService, BlimpSchematicService, PlaneSpawnService
- Replace all BukkitRunnable/Bukkit.getScheduler() with Scheduler abstraction
- Add PaperSchedulerAdapter with TickingTask support
- Introduce LobbyManager interface with platform implementation
- Add BlimpHealthManager and WarningManager interfaces with Paper impls
- Rename FlightRunnable to PlaneCollisionManager, move to platform layer
- Move AirspaceManager to platform layer
- Remove Bukkit dependencies from Team and GamePlayer domain classes
- Replace org.bukkit.Color with TeamColor domain record
- Replace org.bukkit.Location in Team with TeamCoordinates domain record
- Add TeamColor/Location adapter utilities in platform layer
- Introduce PdcKeys utility class for centralised PDC key management
- Add PlayerUtil helper for UUID to online Player resolution
- Replace all legacy ChatColor usage with Adventure API
- Replace legacy Bukkit BossBar with Adventure BossBar in PaperWarningManager
- Remove dead code: lastWarningAt, cancelPlayerPlaneMovements, warnPilot()
- Fix deprecated getMaxHealth() calls to use Attribute API
- Fix mutable Location bug in cannon light placement
- Fix always-true tick % 2 condition in blimp explosion sequence
- Replace Math.max/min clamp pattern with Math.clamp (Java 21)
- Move team member helpers getCannonMembers/getPlaneMembers to GameManager
- Update all callsites to use GameManager or GameOrchestrator as appropriate