@@ -1,8 +1,9 @@
-package com.a3v1k.flightSchool.application.game;
+package com.a3v1k.flightSchool.platform.paper.game;
 
+import com.a3v1k.flightSchool.application.game.GameManager;
+import com.a3v1k.flightSchool.application.scheduler.Scheduler;
 import com.a3v1k.flightSchool.domain.match.GameState;
 import com.a3v1k.flightSchool.platform.paper.FlightSchool;
-import com.a3v1k.flightSchool.platform.paper.listener.GameListener;
 import com.a3v1k.flightSchool.platform.paper.util.PdcKeys;
 import io.lumine.mythic.core.mobs.ActiveMob;
 import lombok.RequiredArgsConstructor;
@@ -11,18 +12,13 @@ import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Bukkit;
 import org.bukkit.Color;
 import org.bukkit.Location;
-import org.bukkit.NamespacedKey;
-import org.bukkit.Particle;
-import org.bukkit.Sound;
 import org.bukkit.World;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.LivingEntity;
 import org.bukkit.entity.Player;
 import org.bukkit.entity.TextDisplay;
 import org.bukkit.persistence.PersistentDataType;
-import org.bukkit.scheduler.BukkitRunnable;
 import org.bukkit.util.Transformation;
-import org.bukkit.util.Vector;
 import org.joml.AxisAngle4f;
 import org.joml.Vector3f;
 
@@ -34,13 +30,11 @@ import java.util.Set;
 import java.util.UUID;
 
 @RequiredArgsConstructor
-public class AirspaceManager extends BukkitRunnable {
+public final class AirspaceManager {
 
-    private static final long WARNING_COOLDOWN_MILLIS = 1_500L;
     private static final double BOUNDARY_WARNING_DISTANCE = 24.0D;
     private static final float BOUNDARY_DISPLAY_SCALE = 800.0F;
     private static final float BOUNDARY_VIEW_RANGE = 64.0F;
-    private static final int BOUNDARY_TEXT_SIZE = 10;
     private static final int MIN_BOUNDARY_ALPHA = 24;
     private static final int MAX_BOUNDARY_ALPHA = 190;
 
@@ -48,11 +42,23 @@ public class AirspaceManager extends BukkitRunnable {
     private final GameManager gameManager;
     private final int minFlightY;
     private final int maxFlightY;
-    private final Map<UUID, Long> lastWarningAt = new HashMap<>();
     private final Map<UUID, BoundaryDisplays> boundaryDisplays = new HashMap<>();
 
-    @Override
-    public void run() {
+    private Scheduler.Task task;
+
+    public void start(Scheduler scheduler) {
+        task = scheduler.runRepeating(this::update, 0L, 1L);
+    }
+
+    public void shutdown() {
+        if (task != null) {
+            task.cancel();
+            task = null;
+        }
+        removeAllDisplays();
+    }
+
+    private void update() {
         if (gameManager.getGameState() != GameState.IN_GAME) {
             shutdown();
             return;
@@ -61,11 +67,10 @@ public class AirspaceManager extends BukkitRunnable {
         Set<UUID> activePilots = new HashSet<>();
         Set<UUID> activePlanes = new HashSet<>();
 
-        for (List<ActiveMob> activeMobs : gameManager.getTeamPlanes().values()) {
-            if (activeMobs == null) {
-                continue;
-            }
+        if (!(plugin.getGameManager() instanceof PaperGameManager paperGameManager)) return;
 
+        for (List<ActiveMob> activeMobs : paperGameManager.getTeamPlanes().values()) {
+            if (activeMobs == null) continue;
             for (ActiveMob activeMob : activeMobs) {
                 updatePlaneBoundary(activeMob, activePilots, activePlanes);
             }
@@ -74,40 +79,31 @@ public class AirspaceManager extends BukkitRunnable {
         cleanupStaleState(activePilots, activePlanes);
     }
 
-    public void shutdown() {
-        removeAllDisplays();
-
-        try {
-            cancel();
-        } catch (IllegalStateException ignored) {
-        }
-    }
-
-    private void updatePlaneBoundary(ActiveMob activeMob, Set<UUID> activePilots, Set<UUID> activePlanes) {
-        if (activeMob == null || activeMob.isDead() || activeMob.getEntity() == null) {
-            return;
-        }
+    private void updatePlaneBoundary(
+        ActiveMob activeMob,
+        Set<UUID> activePilots,
+        Set<UUID> activePlanes
+    ) {
+        if (activeMob == null || activeMob.isDead() || activeMob.getEntity() == null) return;
 
         Entity plane = activeMob.getEntity().getBukkitEntity();
-        if (plane == null || !plane.isValid()) {
-            return;
-        }
+        if (plane == null || !plane.isValid()) return;
 
         activePlanes.add(plane.getUniqueId());
 
-        Player player = getOwner(plane);
-        if (player == null) {
-            return;
-        }
+        Player player = getOwnerPlayer(plane);
+        if (player == null) return;
 
         activePilots.add(player.getUniqueId());
 
-        if (plane.getLocation().getY() > maxFlightY) {
+        double planeY = plane.getLocation().getY();
+
+        if (planeY > maxFlightY) {
             crashPlane(activeMob, plane, player, "ceiling");
             return;
         }
 
-        if (plane.getLocation().getY() < minFlightY) {
+        if (planeY < minFlightY) {
             crashPlane(activeMob, plane, player, "floor");
             return;
         }
@@ -115,16 +111,19 @@ public class AirspaceManager extends BukkitRunnable {
         updateBoundaryDisplays(player, plane);
     }
 
-    private void crashPlane(ActiveMob activeMob, Entity plane, Player player, String boundaryName) {
-        player.sendActionBar(Component.text("You crashed into the airspace " + boundaryName, NamedTextColor.RED));
+    private void crashPlane(
+        ActiveMob activeMob,
+        Entity plane,
+        Player player,
+        String boundaryName
+    ) {
+        player.sendActionBar(Component.text(
+            "You crashed into the airspace " + boundaryName, NamedTextColor.RED));
 
-        if (plane instanceof LivingEntity livingEntity) {
-            if (!livingEntity.isDead()) {
-                livingEntity.setHealth(0.0D);
-            }
+        if (plane instanceof LivingEntity le) {
+            if (!le.isDead()) le.setHealth(0.0D);
             return;
         }
-
 
         activeMob.despawn();
     }
@@ -140,24 +139,31 @@ public class AirspaceManager extends BukkitRunnable {
         updateBoundaryDisplay(player, displays.bottomDisplay, planeLocation, minFlightY, distanceToBottom);
     }
 
-    private void updateBoundaryDisplay(Player player, TextDisplay display, Location planeLocation, int boundaryY, double distanceToBoundary) {
+    private void updateBoundaryDisplay(
+        Player player,
+        TextDisplay display,
+        Location planeLocation,
+        int boundaryY,
+        double distanceToBoundary
+    ) {
         if (distanceToBoundary > BOUNDARY_WARNING_DISTANCE) {
             hideDisplay(player, display);
             return;
         }
 
         double zOffset = BOUNDARY_DISPLAY_SCALE / 9;
-
         boolean ceiling = planeLocation.getY() > (double) (maxFlightY + minFlightY) / 2;
+
         Location currentDisplayLocation = display.getLocation();
         Location displayLocation = new Location(
-                planeLocation.getWorld(),
-                planeLocation.getX(),
-                planeLocation.getY() + (ceiling ? 5 : -2 /*needed because the text display can bug visually when you get close to it*/),
-                planeLocation.getZ() + (ceiling ? -zOffset : zOffset),
-                currentDisplayLocation.getYaw(),
-                currentDisplayLocation.getPitch()
+            planeLocation.getWorld(),
+            planeLocation.getX(),
+            planeLocation.getY() + (ceiling ? 5 : -2),
+            planeLocation.getZ() + (ceiling ? -zOffset : zOffset),
+            currentDisplayLocation.getYaw(),
+            currentDisplayLocation.getPitch()
         );
+
         display.teleport(displayLocation);
         display.setBackgroundColor(buildBoundaryBackground(distanceToBoundary));
 
@@ -167,26 +173,27 @@ public class AirspaceManager extends BukkitRunnable {
     }
 
     private BoundaryDisplays getOrCreateDisplays(Player player, World world) {
-        BoundaryDisplays existingDisplays = boundaryDisplays.get(player.getUniqueId());
+        BoundaryDisplays existing = boundaryDisplays.get(player.getUniqueId());
 
-        if (existingDisplays == null || !existingDisplays.isValidFor(world)) {
-            if (existingDisplays != null) {
-                existingDisplays.remove();
-            }
+        if (existing == null || !existing.isValidFor(world)) {
+            if (existing != null) existing.remove();
 
-            BoundaryDisplays newDisplays = new BoundaryDisplays(
-                    createBoundaryDisplay(world, true),
-                    createBoundaryDisplay(world, false)
+            BoundaryDisplays fresh = new BoundaryDisplays(
+                createBoundaryDisplay(world, true),
+                createBoundaryDisplay(world, false)
             );
-            boundaryDisplays.put(player.getUniqueId(), newDisplays);
-            return newDisplays;
+            boundaryDisplays.put(player.getUniqueId(), fresh);
+            return fresh;
         }
 
-        return existingDisplays;
+        return existing;
     }
 
     private TextDisplay createBoundaryDisplay(World world, boolean facingDown) {
-        TextDisplay display = world.spawn(new Location(world, 0, facingDown ? maxFlightY : minFlightY, 0), TextDisplay.class);
+        TextDisplay display = world.spawn(
+            new Location(world, 0, facingDown ? maxFlightY : minFlightY, 0),
+            TextDisplay.class
+        );
         display.setVisibleByDefault(false);
         display.setPersistent(false);
         display.setBillboard(org.bukkit.entity.Display.Billboard.FIXED);
@@ -207,43 +214,30 @@ public class AirspaceManager extends BukkitRunnable {
     private Transformation createBoundaryTransformation(boolean facingDown) {
         float rotation = (float) Math.toRadians(facingDown ? 90.0D : -90.0D);
         return new Transformation(
-                new Vector3f(),
-                new AxisAngle4f(rotation, 1.0F, 0.0F, 0.0F),
-                new Vector3f(BOUNDARY_DISPLAY_SCALE, BOUNDARY_DISPLAY_SCALE, BOUNDARY_DISPLAY_SCALE),
-                new AxisAngle4f()
+            new Vector3f(),
+            new AxisAngle4f(rotation, 1.0F, 0.0F, 0.0F),
+            new Vector3f(BOUNDARY_DISPLAY_SCALE, BOUNDARY_DISPLAY_SCALE, BOUNDARY_DISPLAY_SCALE),
+            new AxisAngle4f()
         );
     }
 
     private Color buildBoundaryBackground(double distanceToBoundary) {
-        double clampedDistance = Math.max(0.0D, Math.min(distanceToBoundary, BOUNDARY_WARNING_DISTANCE));
-        double intensity = 1.0D - (clampedDistance / BOUNDARY_WARNING_DISTANCE);
+        double clamped = Math.clamp(distanceToBoundary, 0.0D, BOUNDARY_WARNING_DISTANCE);
+        double intensity = 1.0D - (clamped / BOUNDARY_WARNING_DISTANCE);
         int alpha = (int) Math.round(MIN_BOUNDARY_ALPHA + ((MAX_BOUNDARY_ALPHA - MIN_BOUNDARY_ALPHA) * intensity));
         return Color.fromARGB(alpha, 255, 0, 0);
     }
 
-    private Player getOwner(Entity plane) {
-        String ownerUuid = plane.getPersistentDataContainer()
+    private Player getOwnerPlayer(Entity plane) {
+        String uuidString = plane.getPersistentDataContainer()
             .get(PdcKeys.OWNER_UUID, PersistentDataType.STRING);
-        if (ownerUuid == null) {
-            return null;
-        }
+        if (uuidString == null) return null;
 
         try {
-            return Bukkit.getPlayer(UUID.fromString(ownerUuid));
-        } catch (IllegalArgumentException ignored) {
+            return Bukkit.getPlayer(UUID.fromString(uuidString));
+        } catch (IllegalArgumentException e) {
             return null;
         }
-    }
-
-    private void warnPilot(Player player, String boundaryName) {
-        long now = System.currentTimeMillis();
-        long lastWarning = lastWarningAt.getOrDefault(player.getUniqueId(), 0L);
-        if (now - lastWarning < WARNING_COOLDOWN_MILLIS) {
-            return;
-        }
-
-        player.sendActionBar(Component.text("You hit the airspace " + boundaryName, NamedTextColor.RED));
-        lastWarningAt.put(player.getUniqueId(), now);
     }
 
     private void hideDisplay(Player player, TextDisplay display) {
@@ -254,41 +248,24 @@ public class AirspaceManager extends BukkitRunnable {
 
     private void cleanupStaleState(Set<UUID> activePilots, Set<UUID> activePlanes) {
         boundaryDisplays.entrySet().removeIf(entry -> {
-            if (activePilots.contains(entry.getKey())) {
-                return false;
-            }
-
+            if (activePilots.contains(entry.getKey())) return false;
             entry.getValue().remove();
             return true;
         });
-
-        lastWarningAt.keySet().removeIf(uuid -> !activePilots.contains(uuid));
     }
 
     private void removeAllDisplays() {
-        for (BoundaryDisplays displays : boundaryDisplays.values()) {
-            displays.remove();
-        }
-
+        boundaryDisplays.values().forEach(BoundaryDisplays::remove);
         boundaryDisplays.clear();
-        lastWarningAt.clear();
     }
 
-
-    private static final class BoundaryDisplays {
-        private final TextDisplay topDisplay;
-        private final TextDisplay bottomDisplay;
-
-        private BoundaryDisplays(TextDisplay topDisplay, TextDisplay bottomDisplay) {
-            this.topDisplay = topDisplay;
-            this.bottomDisplay = bottomDisplay;
-        }
+    private record BoundaryDisplays(TextDisplay topDisplay, TextDisplay bottomDisplay) {
 
         private boolean isValidFor(World world) {
             return topDisplay.isValid()
-                    && bottomDisplay.isValid()
-                    && topDisplay.getWorld().equals(world)
-                    && bottomDisplay.getWorld().equals(world);
+                && bottomDisplay.isValid()
+                && topDisplay.getWorld().equals(world)
+                && bottomDisplay.getWorld().equals(world);
         }
 
         private void remove() {
@@ -296,4 +273,5 @@ public class AirspaceManager extends BukkitRunnable {
             bottomDisplay.remove();
         }
     }
+
 }
